# stupidserver

./: CMakeLists.txt  compile_commands.json  main.c  makefile
src/: helpers.c  helpers.h
